--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-resizable": "^2.0.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
