--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^2.6.11",
     "vue-resizable": "^2.0.5",
     "vue-router": "^3.2.0",
+    "vuetify-file-browser": "^1.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
