--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "uid": "^2.0.0",
     "vue": "^2.6.11",
     "vue-resizable": "^2.0.5",
     "vue-router": "^3.2.0",
