--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "uid": "^2.0.0",
     "vue": "^2.6.11",
     "vue-resizable": "^2.0.5",
     "vue-router": "^3.2.0",
+    "vue-typed-js": "^0.1.2",
+    "vue-typer": "^1.2.0",
     "vuetify-file-browser": "^1.0.2",
     "vuex": "^3.4.0"
   },
