--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "draggable-vue-directive": "^2.1.0",
     "jquery": "^3.6.0",
     "uid": "^2.0.0",
     "vue": "^2.6.11",
