--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-typed-js": "^0.1.2",
     "vue-typer": "^1.2.0",
     "vuetify-file-browser": "^1.0.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "whatamesh": "^0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
